# shapeshifter-solver

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
solver-core/: Cargo.toml
solver-core/src/: engine.rs  lib.rs  main.rs
tests/: test_parse_parity.py  test_server.py
tests/dom/: package-lock.json  package.json  parse.js  render_page.js  test_userscript_dom.js  test_userscript_parse.js
tests/fixtures/: hard_synthetic.json  level_31.json  level_48.json  level_96.json
tools/: export_level.py  shapeshifter_page.py  solve_page.py
userscript/: shapeshifter-solver.user.js
