[package]
name = "solver-core"
version = "1.0.0"
edition = "2021"
description = "Fast parallel solver for the Neopets Shapeshifter puzzle, with an HTTP serve mode"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[profile.release]
lto = true
codegen-units = 1
